Always show scroll bar to prevent layout shift

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@ body {
   margin: 0 auto;
   line-height: 1.5;
   min-height: 100%;
+  overflow-y: scroll;
 }
 
 body,
